--- a/contact information.html
+++ b/contact information.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+
   <head>
+
     <meta charset="utf-8">
     <title>Contact Information</title>
+    <link rel="stylesheet" href="C:\Users\hanna\OneDrive\Desktop\Web Development\HTML-Personal Site\css\styles.css">
+
   </head>
+
   <hr>
+
   <body>
+
     <h3>Primary Contact Options</h3>
+
     <ul>
       <li>Catch me outside</li>
       <li>Whistle four notes</li>
@@ -15,13 +23,16 @@
     </ul>
 
   <h3>Other</h3>
+
     <ul>
       <li>Twitch</li>
       <li>Youtube</li>
       <li>Face Book</li>
       <li>Instagram</li>
     </ul>
+
     <hr>
+
     <form action="mailto:contactmesongbird@gmail.com" method="post" enctype="text/plain">
       <label>Your Name:</label>
       <input type="text" name="Your Name" value=""><br>
@@ -31,5 +42,7 @@
       <textarea name="" rows="10" cols="30"></textarea><br>
       <input type="submit" name="Your Message">
     </form>
+
   </body>
+
 </html>
