--- a/hobbies.html
+++ b/hobbies.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+
   <head>
+
     <meta charset="utf-8">
     <title>My Hobbies</title>
+    <link rel="stylesheet" href="C:\Users\hanna\OneDrive\Desktop\Web Development\HTML-Personal Site\css\styles.css">
+
   </head>
+
   <body>
+
     <h3>My Hobbies</h3>
+
     <ol>
       <li>Art in various forms</li>
         <ul>
@@ -23,5 +30,8 @@
       <li>Storm chasing</li>
       <li>Reading a good book on a rainy day</li>
       <li>Training dogs</li>
+    </ol>  
+
   </body>
+
 </html>
