--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <tr>
         <td><img src="C:\Users\hanna\OneDrive\Desktop\Emotes\Futuristic_K9_Buddie_Emote.112.png" alt="Song Bird profile picture"></td>
         <td>  <h1>Song Bird</h1>
-            <p><em>Persuer of Knowledge</em></p>
+            <p><em>Pursuer of Knowledge</em></p>
             <p>I have traveled great distances, across my living room, in the persuit of happiness and something to do. Jill of all trades and a master of <a href="prank trade.html">this one</a>, I will figure out any problem thrown my way. To stave off the boredom, I learn as many things as possible. Unfortinalely my brain never allows me to do just one thing. Song Bird is one of many names I have collected along the way. Gonna catch them all.</p></td>
       </tr>
     </table>
