--- a/prank trade.html
+++ b/prank trade.html
@@ -5,7 +5,7 @@
 
     <meta charset="utf-8">
     <title>This One</title>
-    <link rel="stylesheet" href="C:\Users\hanna\OneDrive\Desktop\Web Development\HTML-Personal Site\css\styles.css">
+    <link rel="stylesheet" href="/css/styles.css">
 
   </head>
 
