--- a/contact information.html
+++ b/contact information.html
@@ -5,7 +5,7 @@
 
     <meta charset="utf-8">
     <title>Contact Information</title>
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="css/styles.css">
 
   </head>
 
